feat: add new fee rule, using APRO oracle to fetch BTC price in realtime

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,20 @@
 # This file is an example of the .env file that should be created in the contract directory
 PRIVATE_KEY=0x
-# address of the wgoatbtc contract
-WGOATBTC_ADDRESS=0xbC10000000000000000000000000000000000000
+# Fee token address (same as WGOATBTC_ADDRESS)
+FEE_TOKEN=0xbC10000000000000000000000000000000000000
 # address to receive fees
 FEE_RECIPIENT=0x
 # address allowed to submit to goat vrf contract
 RELAYER_ADDRESS=0x
+# Fee rule type, either "FIXED" or "APRO_BTC"
+FEE_RULE_TYPE=FIXED
+# When FEE_RULE_TYPE=FIXED, this is the fixed fee in wei
 # about $0.1
 FIXED_FEE=1000000000000
+# When FEE_RULE_TYPE=APRO_BTC, this is the target value in USD (with 8 decimals, $0.1)
+# TARGET_VALUE=10000000
+# When FEE_RULE_TYPE=APRO_BTC, this is the APRO price feed contract address
+# PRICE_FEED=0x
 # overhead gas to make sure the transaction goes through
 OVERHEAD_GAS=200000
 # max deadline delta in seconds
