fix: add check & config option for max allowed callback gas

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ FIXED_FEE=1000000000000
 # PRICE_FEED=0x
 # overhead gas to make sure the transaction goes through
 OVERHEAD_GAS=200000
+# max callback gas
+MAX_CALLBACK_GAS=20000000
 # max deadline delta in seconds
 MAX_DEADLINE_DELTA=604800
 # request expire time in seconds, request will no longer be fulfilled after this time
