--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ FIXED_FEE=1000000000000
 # TARGET_VALUE=10000000
 # When FEE_RULE_TYPE=APRO_BTC, this is the APRO price feed contract address
 # PRICE_FEED=0x
+# Max allowed stale period of price feed oracle in seconds, example value is 999 years
+# STALE_PERIOD=31504464000
 # overhead gas to make sure the transaction goes through
 OVERHEAD_GAS=200000
 # max callback gas
